stuck on spotbyid fetch bug

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -41,7 +41,7 @@
 .reviewSection {
     display: inline-flex;
     flex-direction: column;
-    padding-left: 75px;
+    padding-left: 70px;
     text-decoration: none;
 }
 
